--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -25,16 +25,16 @@ body {
   color: var(--text-color);
   border-radius: clamp(0.75rem, 2vw, 1rem);
   border: 1px solid var(--accent-color);
-  box-shadow: 0 0 12px rgba(9, 115, 121, 0.516);
+  box-shadow: 0 0 20px rgba(9, 115, 121, 0.516);
   box-sizing: border-box;
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%,-50%);
   overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: var(--accent-color) #f1f1f1;
-  animation: fadeIn 0.3s ease-out;
+  animation: fadeIn 0.5s ease-out;
 
   &::-webkit-scrollbar {
     width: 8px;
@@ -51,6 +51,7 @@ body {
     opacity: 0;
     transform: translate(-50%, -45%);
   }
+
   to {
     opacity: 1;
     transform: translate(-50%, -50%);
@@ -69,11 +70,12 @@ body {
   font-size: 2rem !important;
   color: var(--accent-color);
   transform: translateY(2px);
-  transition: transform 0.2s ease, filter 0.3s ease;
+  transition: all 0.3s ease !important;
 
   &:hover {
     transform: scale(1.1);
-    filter: drop-shadow(0 0 6px var(--accent-color));
+    transition: transform 0.2s ease, filter 0.3s ease;
+    filter: drop-shadow(0 0 6px #00e1ff); // <- azul celeste
   }
 }
 
