--- a/src/components/SearchWeather/styles.scss
+++ b/src/components/SearchWeather/styles.scss
@@ -2,19 +2,22 @@
   // Variables locales al componente
   --background-color: #1c1c1c;
   --text-color: #f8f8f8;
-  --border-color: #5be7a3d2;
+  --border-color: #645be7d2;
   --accent-color: #a893ea;
-  --input-bg: #2c2c2c;
-  --input-border: #9656e9;
-  --placeholder-color: #d0c8e8;
+  --input-bg: #28343115;
+  --input-border: #5b89eb86;
+  --placeholder-color: #cddde5;
 
   padding: 1rem;
 
   &__appbar {
     background-color: var(--background-color);
     color: var(--text-color);
-    box-shadow: none;
     border-bottom: 1px solid var(--border-color);
+    border-top: 1px solid var(--border-color);
+    border-left: 1px solid rgba(28, 62, 109, 0.713);
+    border-right: 1px solid rgba(28, 62, 109, 0.713);
+    
   }
 
   &__toolbar {
@@ -22,6 +25,7 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    box-shadow: 0 0 20px rgba(123, 14, 153, 0.408);
   }
 
   &__icon, &__search-button {
@@ -36,15 +40,17 @@
     align-items: center;
     background-color: var(--input-bg);
     border: 1px solid var(--input-border);
+    box-shadow: 0 0 12px rgba(9, 115, 121, 0.516);
     border-radius: 0.5rem;
     padding: 0 1rem;
     width: 140px;
-    transition: width 0.3s ease, box-shadow 0.2s ease;
+    transition: width 0.3s ease, box-shadow 0.2s ease,
+    border-color 0.3s ease, box-shadow 0.2s ease;
 
     &:focus-within {
       width: 200px;
-      border-color: var(--accent-color);
-      box-shadow: 0 0 0 2px rgba(195, 214, 226, 0.2);
+      border-color: #995beb;
+      box-shadow: 0 0 12px rgba(87, 96, 228, 0.516);
     }
   }
 
