--- a/src/components/SearchWeather/styles.scss
+++ b/src/components/SearchWeather/styles.scss
@@ -17,7 +17,7 @@
     border-top: 1px solid var(--border-color);
     border-left: 1px solid rgba(28, 62, 109, 0.713);
     border-right: 1px solid rgba(28, 62, 109, 0.713);
-    
+
   }
 
   &__toolbar {
@@ -28,7 +28,8 @@
     box-shadow: 0 0 20px rgba(123, 14, 153, 0.408);
   }
 
-  &__icon, &__search-button {
+  &__icon,
+  &__search-button {
     color: var(--accent-color);
     font-size: 2rem;
     flex-shrink: 0;
@@ -45,7 +46,7 @@
     padding: 0 1rem;
     width: 140px;
     transition: width 0.3s ease, box-shadow 0.2s ease,
-    border-color 0.3s ease, box-shadow 0.2s ease;
+      border-color 0.3s ease, box-shadow 0.2s ease;
 
     &:focus-within {
       width: 200px;
@@ -54,36 +55,44 @@
     }
   }
 
-    &__input {
-    width: 100%;
-    padding: 0.6rem 1rem;
-    border: none;
-    outline: none;
-    background-color: transparent;
-    font-size: 1rem;
+  &__input {
+  width: 100%;
+  padding: 0.6rem 1rem;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-size: 1rem;
+  text-align: center;
 
-    // Estilos para el input interno de MUI
-    input {
-      color: var(--text-color);
-    }
+  input {
+    color: var(--text-color);
+    text-align: center;
 
-    input::placeholder {
+    &::placeholder {
       color: var(--placeholder-color);
       opacity: 1;
+      text-align: center;
+      transition: opacity 0.2s ease; // animación suave
+    }
+
+    &:focus::placeholder {
+      opacity: 0;
     }
   }
+}
+
 
   &__search-button {
     margin-left: 0.3rem;
     padding: 0.5rem;
-  
+
     svg {
       color: var(--accent-color);
       width: 1.5rem;
       height: 1.5rem;
     }
   }
-  
+
 
 
   &__error {
